2024-05-20T16:18:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9161729762 # 290
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-20
* notice: last 14d: unq all: 12 40
* notice: prev accum: outdated-unq outdated-all / unq all: 796 2471 / 809 2514
* notice: next accum: outdated-unq outdated-all / unq all: 797 2474 / 809 2514
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-06] / []

2024-05-19T08:15:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9146218848 # 286
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-19
* notice: last 14d: unq all: 13 43
* notice: prev accum: outdated-unq outdated-all / unq all: 796 2471 / 808 2511
* notice: next accum: outdated-unq outdated-all / unq all: 796 2471 / 809 2514
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2024-05-19]

2024-05-19T01:06:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9143930105 # 285
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-19
* notice: last 14d: unq all: 12 40
* notice: prev accum: outdated-unq outdated-all / unq all: 795 2466 / 807 2510
* notice: next accum: outdated-unq outdated-all / unq all: 796 2471 / 808 2511
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [2024-05-04] / [2024-05-18]

2024-05-18T08:15:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9138499674 # 283