@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-20T16:18:00Z",
-  "count_outdated" : 2474,
-  "uniques_outdated" : 797,
+  "timestamp" : "2024-05-21T16:17:00Z",
+  "count_outdated" : 2475,
+  "uniques_outdated" : 798,
   "count" : 2514,
   "uniques" : 809,
   "views" : [
-    {
-      "timestamp": "2024-05-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-09T00:00:00Z",
       "count": 1,
