@@ -1,3 +1,12 @@
+2024-05-21T16:17:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9177896143 # 293
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-21
+* notice: last 14d: unq all: 11 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 797 2474 / 809 2514
+* notice: next accum: outdated-unq outdated-all / unq all: 798 2475 / 809 2514
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-05-07] / []
+
 2024-05-20T16:18:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9161729762 # 290
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-20
